# Ford-Mondeo-MK-DPF-Tracker

./: .gitignore  CMakeLists.txt  Ford-Mondeo-MK-DPF-Tracker.ino  README.md  hal_project_config.h  todo.txt  tracker.cpp  tracker.h
Credentials/: README.md  library.properties
Credentials/config/: MacHostMapping.example.cpp
backend/: .env.example  README.md  pyproject.toml
backend/db/migrations/: 001_initial_schema.sql  002_telemetry_windows.sql
backend/deploy/: dpf-mqtt-ingestor.service.example
backend/scripts/: apply_migrations.py  diagnose_pi.py  ingest_sample.py  install_systemd_service.sh  refresh_windows.py  run_unit_tests.py  validate_migrations.py
backend/src/dpf_backend/: __init__.py  config.py  topics.py
backend/src/dpf_backend/analyzer/: __init__.py  windows.py
backend/src/dpf_backend/api/: app.py  queries.py  server.py
backend/src/dpf_backend/ingest/: __init__.py  models.py  mqtt_ingestor.py  parser.py
backend/src/dpf_backend/storage/: __init__.py  postgres.py  session.py
backend/tests/: test_api_queries.py  test_migrations.py  test_mqtt_ingestor.py  test_parser.py  test_session.py  test_skeleton.py  test_windows.py
materials/DPF_tracker/: DPF_tracker.kicad_pcb  DPF_tracker.kicad_pro  DPF_tracker.kicad_sch  MondeoDPFTracker.pcb
scripts/: configure-cmake.sh  refresh-intellisense.sh  serial-monitor.py  setup-credentials.sh  upload-serial.sh  upload-uf2.sh
