[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dpf-backend"
version = "0.1.0"
description = "Backend services for the Ford Mondeo MK4 DPF tracker."
requires-python = ">=3.11"
dependencies = [
    "paho-mqtt>=2.1,<3",
    "psycopg[binary]>=3.2,<4",
]

[project.scripts]
dpf-mqtt-ingestor = "dpf_backend.ingest.mqtt_ingestor:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
