[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dpf-backend"
version = "0.1.0"
description = "Backend services for the Ford Mondeo MK4 DPF tracker."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "paho-mqtt>=2.1,<3",
    "psycopg[binary]>=3.2,<4",
    "uvicorn[standard]>=0.30,<1",
]

[project.scripts]
dpf-mqtt-ingestor = "dpf_backend.ingest.mqtt_ingestor:main"
dpf-api = "dpf_backend.api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
